# chi-shell

./: CMakeLists.txt  build.sh  check_wayfire.py  dev.sh  failed-think.txt  failed.txt  model1.txt  model2.txt  sol.txt  spec-model1.txt  spec-model2.txt  spec2-model2.txt
apps/shinobi/: progress.txt
apps/shinobi-2/: CMakeLists.txt  progress.txt  run.sh
apps/shinobi-2-1-broken/: run.sh  shinobi.xy
apps/shinobi-2-1-broken/qml/: TerminalTabBar.qml
apps/shinobi-2-1-broken/src/rendering/: TerminalWidget.cpp  TerminalWidget.h
apps/shinobi-2-1-broken/src/session/: TerminalSession.h
apps/shinobi-2-1-broken/src/terminal/: PtyManager.cpp  PtyManager.h  VtBridge.cpp  VtBridge.h
apps/shinobi-2-2/: CMakeLists.txt
apps/shinobi-2-2/src/: main.cpp
apps/shinobi-2-2/src/rendering/: TerminalWidget.cpp  TerminalWidget.h
apps/shinobi-2-2/src/session/: SessionManager.cpp  TerminalSession.cpp
apps/shinobi-2-2/src/terminal/: VtBridge.cpp  VtBridge.h
apps/shinobi-2-3/qml/: Main.qml
apps/shinobi-2-3/src/: Log.cpp
apps/shinobi-2-3/src/rendering/: TerminalWidget.cpp  TerminalWidget.h
apps/shinobi-2-3/src/session/: TerminalSession.cpp  TerminalSession.h
apps/shinobi-2-3/src/terminal/: VtBridge.cpp  VtBridge.h
apps/shinobi-2/qml/: TerminalStatusBar.qml
apps/shinobi-2/src/: main.cpp
apps/shinobi-2/src/rendering/: TerminalWidget.cpp
apps/shinobi-2/src/session/: SessionManager.cpp  SessionManager.h  TerminalSession.cpp
apps/shinobi-2/src/terminal/: PtyManager.cpp  VtBridge.cpp
apps/shinobi/src/: Log.h
apps/shinobi/src/rendering/: TerminalWidget.cpp  TerminalWidget.h
apps/shinobi/src/session/: TerminalSession.cpp  TerminalSession.h
apps/shinobi/src/terminal/: Cell.h  VtBridge.cpp  VtBridge.h
dbus/: org.freedesktop.Notifications.xml
protocols/: wlr-foreign-toplevel-management-unstable-v1.xml
qml/: AppIcon.qml  AppLauncher.qml  Desktop.qml  LiveInfo.qml  NotificationCenter.qml  QuickSettings.qml  SettingsTile.qml  StatusBar.qml  Taskbar.qml
qml/Notification/: NotificationActions.qml  NotificationCenter.qml  NotificationDelegate.qml  NotificationLeadingIcon.qml  NotificationPopup.qml  NotificationPopupHost.qml  NotificationTrayIcons.qml
qml/statusbar/: BrightnessSlider.qml  DynamicTileGrid.qml  MaterialIcon.qml  MediaPlayerCard.qml  PowerMenu.qml  PowerMenuItem.qml  QSFooter.qml  QuickSettings.qml  SettingsTile.qml  StatusBar.qml  StatusHeader.qml  TileGrid.qml  VolumeSlider.qml  WiFiPanel.qml
qml/taskbar/: AppContextMenu.qml  CtxItem.qml  LeftButtons.qml  PinnedAppsSection.qml  RightButtons.qml  RunningAppsSection.qml  TaskbarContextMenu.qml  TaskbarItem.qml  TaskbarRoot.qml  TaskbarTooltip.qml  TrashItem.qml  WindowPreview.qml
src/: DesktopEntryModel.cpp  DesktopEntryModel.h  FuzzyMatcher.h  GroupedWindowsModel.cpp  GroupedWindowsModel.h  NotificationServer.cpp  NotificationServer.h  PinnedAppsModel.cpp  PinnedAppsModel.h  ShellManager.cpp  ShellManager.h  ShellSurface.cpp  ShellSurface.h  SystemStatus.cpp  SystemStatus.h  TaskbarModel.cpp  TaskbarModel.h  TrashManager.cpp  TrashManager.h  WayfireIPC.cpp  WayfireIPC.h  WindowThumbnailProvider.cpp  WindowThumbnailProvider.h  WindowTracker.cpp  WindowTracker.h  XdgIconProvider.h  main.cpp
src/Notification/: NotificationServer.cpp  NotificationServer.h
src/statusbar/: MprisController.cpp  MprisController.h  NightLightManager.cpp  NightLightManager.h  PowerActions.cpp  PowerActions.h  PowerProfileManager.cpp  PowerProfileManager.h  ScreenCapture.cpp  ScreenCapture.h  SystemStatus.cpp  SystemStatus.h  WifiManager.cpp  WifiManager.h
